Prevent git location to overflow on very small screens

--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,7 @@
     margin: 0;
     background: transparent;
     border: none;
+    white-space: normal;
   }
 }
 
